--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,20 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  background-color: #0c0c0c;
+  color: #f2f2f2;
+}
+
+a {
+  text-decoration: none;
+  color: #f7d354;
+  transition: all ease 0.3s;
+}
+
+a:hover {
+  color: #b8930c;
 }
